--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,7 +14,7 @@ html {
      100%  {background: #fc4a1a;}
    }
 
-img {
+.shadow {
   &:hover{
     box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.75);
   }
